--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
   <section class="container d-flex justify-content-start align-items-center">
     <div class="post-hero row px-3 px-md-0 gx-4 gy-4">
       <div class="col-12 col-md-4">
-        <div style="border: 2px solid black; padding: 0.7rem;">
+        <div class="post-hero-boxes">
           <div class=" social d-flex align-items-center">
             <img src="/assets/images/social.svg" class="img-fluid" style="width: 70px; height: 70px;">
             <h4>Social Media Management</h4>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div style="border: 2px solid black; padding: 0.7rem;">
+        <div class="post-hero-boxes">
           <div class=" email d-flex align-items-center">
             <img src="/assets/images/email.svg" class="img-fluid" style="width: 70px; height: 70px;">
             <h4>Email Marketing</h4>
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div style="border: 2px solid black; padding: 0.7rem;">
+        <div class="post-hero-boxes">
           <div class=" seo d-flex align-items-center">
             <img src="/assets/images/seo.svg" class="img-fluid" style="width: 70px; height: 70px;">
             <h4>SEO Management</h4>
