--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="./scss/styles.scss">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-  </style>
 </head>
 
 <body>
@@ -24,14 +19,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="navbar-nav ms-auto mx-5 mb-2 mb-lg-0 gap-3">
+        <ul class="navbar-nav ms-auto mx-5 mb-2 mb-lg-0 gap-5 me-5">
           <li class="nav-item"><a class="nav-link fs-6" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link fs-6" href="#">Projects</a></li>
           <li class="nav-item"><a class="nav-link fs-6" href="#">Blog</a></li>
           <li class="nav-item"><a class="nav-link fs-6" href="#">Pricing</a></li>
           <li class="nav-item"><a class="nav-link fs-6" href="#">Contact</a></li>
         </ul>
-        <form class="d-flex ms-auto" role="search">
+        <form class=" ms-5 d-flex justify-content-end" role="search">
           <input class="form-control me-2 w-50 rounded-0 text-center" type="search" placeholder="Let's talk
           " aria-label="Search" style="border: 2px solid black;">
           <button class=" btn btn-warning width:100px rounded-0" type="submit">
@@ -41,10 +36,10 @@
       </div>
     </div>
   </nav>
-  <section class="container d-flex justify-content-start align-items-center">
+  <section class="container d-flex justify-content-center align-items-center">
     <div class="hero-section row align-items-center justify-content-center px-2">
       <div class="hero-txt col-12 col-md-6">
-        <h2 class="hero-txt-head fw-bold mb-3 ">Increase your web traffic with our
+        <h2 class="hero-txt-head fw-semibold mb-3 ">Increase your web traffic with our
           <img src="../assets/images/expert.png" class="img-1 img-fluid h-25">
         </h2>
         <p class="hero-txt-para  mt-3">It is a long established fact that a reader will be distracted by the
@@ -58,20 +53,20 @@
           <img src="/assets/images/Take a tour.png" class="img-2 img-fluid" style="max-height: 50px;">
         </div>
       </div>
-      <div class="col-12 col-md-6 mb-md-0 d-flex justify-content-center">
+      <div class="col-12 col-md-6 mb-md-0 d-flex justify-content-end">
         <img src="../assets/images/hero-img.png" alt="hero-section" class="img-fluid">
       </div>
     </div>
   </section>
   <section class="container d-flex justify-content-start align-items-center">
-    <div class="post-hero row px-3 px-md-0 gx-4 gy-4">
+    <div class="post-hero row px-3 px-md-0 gx-4 gy-4 mt-2">
       <div class="col-12 col-md-4">
         <div class="post-hero-boxes">
           <div class=" social d-flex align-items-center">
             <img src="/assets/images/social.svg" class="img-fluid" style="width: 70px; height: 70px;">
-            <h4>Social Media Management</h4>
+            <h4 class="fw-normal">Social Media Management</h4>
           </div>
-          <p>It is a long established fact that a reader will be distracted by the readable content .It is a long
+          <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
             established fact that.</p>
         </div>
       </div>
@@ -79,20 +74,102 @@
         <div class="post-hero-boxes">
           <div class=" email d-flex align-items-center">
             <img src="/assets/images/email.svg" class="img-fluid" style="width: 70px; height: 70px;">
-            <h4>Email Marketing</h4>
+            <h4 class="fw-normal">Email Marketing</h4>
           </div>
-          <p>It is a long established fact that a reader will be distracted by the readable content .It is a long
-            established fact that .</p>
+          <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
+            established fact that.</p>
         </div>
       </div>
       <div class="col-12 col-md-4">
         <div class="post-hero-boxes">
           <div class=" seo d-flex align-items-center">
             <img src="/assets/images/seo.svg" class="img-fluid" style="width: 70px; height: 70px;">
-            <h4>SEO Management</h4>
+            <h4 class="fw-normal">SEO Management</h4>
           </div>
-          <p>It is a long established fact that a reader will be distracted by the readable content .It is a long
-            established fact that a reader .</p>
+          <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
+            established fact that.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container my-5">
+    <div class="optimising">
+      <h3>Optimising your <span>Website</span></h3>
+      <p>
+        It is a long established fact that a reader will be distracted by the readable content of a page when it is a
+        long.
+      </p>
+
+      <div class="row g-4 mt-4">
+        <div class="col-12 col-sm-6 col-lg-3">
+          <div class="optimising-inner-containers text-center h-100 p-3">
+            <img src="../assets/images/research.svg" alt="Keyword Research" class="img-fluid mb-3">
+            <h4>Keyword Research</h4>
+            <p>
+              It is a long established fact that a reader will be distracted by the It is a long established.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3">
+          <div class="optimising-inner-containers text-center h-100 p-3 ">
+            <img src="../assets/images/content.svg" alt="Content Optimisation" class="img-fluid mb-3">
+            <h4>Content Optimisation</h4>
+            <p>
+              It is a long established fact that a reader will be distracted by the It is a long established.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3">
+          <div class="optimising-inner-containers text-center h-100 p-3">
+            <img src="../assets/images/Target.svg" alt="Target Analysis" class="img-fluid mb-3">
+            <h4>Target Analysis</h4>
+            <p>
+              It is a long established fact that a reader will be distracted by the It is a long established.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3">
+          <div class="optimising-inner-containers text-center h-100 p-3">
+            <img src="../assets/images/Testing.svg" alt="Continuous Testing" class="img-fluid mb-3">
+            <h4>Continous Testing</h4>
+            <p>
+              It is a long established fact that a reader will be distracted by the It is a long established.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container ">
+    <div class="row align-items-center">
+      <div class="solution-text col-12 col-md-6">
+        <h3>Perfect Solution For Your <span>Business</span></h3>
+        <p>It is a long established fact that a reader will be distracted by the It is a long established .t is a long
+          established fact that a reader will be distracted by the readable content of.</p>
+        <button class="btn btn-warning width:100px mb-2">Learn More</button>
+      </div>
+      <div class="solution-img col-12 col-md-6">
+        <img src="../assets/images/solutions.png" class="img-fluid">
+      </div>
+    </div>
+  </section>
+  <section class="container">
+    <div class="mt-5 d-flex">
+      <div class="row align-items-center">
+        <div class="feature-boxes col-12 col-md-4">
+          <img src="../assets/images/grow.svg" class="mt-5">
+          <h3 class="mt-3">Grow Your Business</h3>
+          <p>It is a long established fact that a reader will be distracted by.</p>
+        </div>
+        <div class="feature-boxes col-12 col-md-4">
+          <img src="../assets/images/lead.svg" class="mt-5">
+          <h3 class="mt-3">Get Quality Leads</h3>
+          <p>It is a long established fact that a reader will be distracted by.</p>
+        </div>
+        <div class="feature-boxes col-12 col-md-4">
+          <img src="../assets/images/sales.svg" class="mt-5">
+          <h3 class="mt-3">Drive More Sales</h3>
+          <p>It is a long established fact that a reader will be distracted by.</p>
         </div>
       </div>
     </div>
