--- a/src/index.html
+++ b/src/index.html
@@ -174,6 +174,162 @@
       </div>
     </div>
   </section>
+  <section class="container">
+    <div class="choosing d-flex row justify-content-center text-center mt-4">
+      <h3>Why you should <span>choose us</span></h3>
+      <p>It is a long established fact that a reader will be distracted by the readable content .It
+        is a long
+        established fact that a reader .It is a long established fact that a reader will be.</p>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="/assets/images/optimise.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex row justify-content-center">
+              <h5 class="card-title">See Optimization</h5>
+              <p class="card-text">It is a long established fact that a reader will be distracted by.It is a long
+                established.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/assets/images/keyword.png" class="card-img-top" alt="...">
+            <div class="card-body d-flex row justify-content-center">
+              <h5 class="card-title">Keyword Research</h5>
+              <p class="card-text">It is a long established fact that a reader will be distracted by.It is a long
+                established.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../assets/images/market.png" class="img-end card-img-top" alt="...">
+            <div class="card-body d-flex row justify-content-center">
+              <h5 class="card-title">Social Marketing</h5>
+              <p class="card-text ">It is a long established fact that a reader will be distracted by.It is a
+                long
+                established.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container">
+    <div class="seo d-flex row justify-content-center align-items-center">
+      <div class="seo-img col-12 col-md-6 ">
+        <img src="../assets/images/seo-img.png" class="img-fluid">
+      </div>
+      <div class="seo-txt col-12 col-md-6">
+        <h3>You make ask what
+          SEO & why do you <span>need it? </span></h3>
+        <p>It is a long established fact that a reader will be distracted by the readable content .It is a long
+          established fact that a reader .It is a long.</p>
+        <div class="seo-right">
+          <div class="box">
+            <div class="box-item d-flex flex-column flex-md-row align-items-start">
+              <div class="box-img me-md-3 mb-3 mb-md-0">
+                <img src="../assets/images/top.png" alt="Social media marketing">
+              </div>
+              <div class="box-txt">
+                <h4>Social media marketing</h4>
+                <p>It is a long established fact that a reader will be distracted by the.</p>
+              </div>
+            </div>
+            <div class="box-item d-flex flex-column flex-md-row align-items-start">
+              <div class="box-img me-md-3 mb-3 mb-md-0">
+                <img src="../assets/images/mid.png" alt="Email marketing">
+              </div>
+              <div class="box-txt">
+                <h4>Email marketing</h4>
+                <p>It is a long established fact that a reader will be distracted by the.</p>
+              </div>
+            </div>
+            <div class="box-item d-flex flex-column flex-md-row align-items-start">
+              <div class="box-img me-md-3 mb-3 mb-md-0">
+                <img src="../assets/images/end.png" alt="SEO Optimization">
+              </div>
+              <div class="box-txt">
+                <h4>SEO Optimization</h4>
+                <p>It is a long established fact that a reader will be distracted by the.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <section class="py-5">
+    <div class="container">
+      <div class="row text-center gy-4">
+        <div class="col-6 col-md-3">
+          <h3>86</h3>
+          <p>Happy Clients</p>
+        </div>
+        <div class="col-6 col-md-3">
+          <h3>118</h3>
+          <p>Projects Done</p>
+        </div>
+        <div class="col-6 col-md-3">
+          <h3>6+</h3>
+          <p>Years of Experience</p>
+        </div>
+        <div class="col-6 col-md-3">
+          <h3>14</h3>
+          <p>National Awards</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="py-5" style="background-color: #FAFAFA;">
+    <div class="container text-center">
+      <h2 class="mb-3 fw-normal">Subscribe & Find The Perfect Cosmetics</h2>
+      <p class="mb-4 text-muted">Enter Your Email And Get Updated New Products & News</p>
+
+      <form class="row justify-content-center g-2">
+        <div class="col-md-3">
+          <input type="text" class="form-control" placeholder="Name">
+        </div>
+        <div class="col-md-4">
+          <input type="email" class="form-control" placeholder="Email Address">
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-primary w-100" style="background-color: #7B61FF; border: none;">Subscribe</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <footer class="py-5 text-center">
+    <div class="container">
+      <h4 class="fw-bold mb-4">nuvosa<span style="color: #FF4D5A;">●</span></h4>
+
+      <ul class="list-inline mb-4">
+        <li class="list-inline-item mx-3"><a href="#" class="text-dark text-decoration-none">Overview</a></li>
+        <li class="list-inline-item mx-3"><a href="#" class="text-dark text-decoration-none">Pricing</a></li>
+        <li class="list-inline-item mx-3"><a href="#" class="text-dark text-decoration-none">Careers</a></li>
+        <li class="list-inline-item mx-3"><a href="#" class="text-dark text-decoration-none">Help</a></li>
+        <li class="list-inline-item mx-3"><a href="#" class="text-dark text-decoration-none">Privacy</a></li>
+      </ul>
+
+      <div
+        class="footer-bottom pt-3 border-top text-start text-md-between d-flex flex-column flex-md-row align-items-center justify-content-md-between">
+        <p class="text-muted small mb-2 mb-md-0 text-center text-md-start">
+          &copy; 2023 Nuvosa. All Rights Reserved.
+        </p>
+        <div class="footer-links text-center text-md-end">
+          <a href="#" class="text-muted text-decoration-none me-md-3 d-block d-md-inline">Terms Of Use</a>
+          <a href="#" class="text-muted text-decoration-none me-md-3 d-block d-md-inline">Copyright & Trademark</a>
+          <a href="#" class="text-muted text-decoration-none d-block d-md-inline">Policy</a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
+
 </body>
 
 </html>
