fix-wip:carousel-done

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
     </div>
   </section>
   <section class="container my-5">
-    <div class="optimising">
+    <div class="optimising mt-5">
       <h3>Optimising your <span>Website</span></h3>
       <p>
         It is a long established fact that a reader will be distracted by the readable content of a page when it is a
@@ -175,7 +175,7 @@
     </div>
   </section>
   <section class="container">
-    <div class="choosing d-flex row justify-content-center text-center mt-4">
+    <div class="choosing d-flex row justify-content-center text-center ">
       <h3>Why you should <span>choose us</span></h3>
       <p>It is a long established fact that a reader will be distracted by the readable content .It
         is a long
@@ -221,7 +221,7 @@
         <img src="../assets/images/seo-img.png" class="img-fluid">
       </div>
       <div class="seo-txt col-12 col-md-6">
-        <h3>You make ask what
+        <h3>You may ask what
           SEO & why do you <span>need it? </span></h3>
         <p>It is a long established fact that a reader will be distracted by the readable content .It is a long
           established fact that a reader .It is a long.</p>
@@ -282,6 +282,169 @@
       </div>
     </div>
   </section>
+  <section class="container my-5">
+    <div class="row align-items-center">
+      <div class="solution-text col-12 col-md-6 mb-4 mb-md-0">
+        <h3>Check Your Website <span>Speed</span></h3>
+        <p>
+          It is a long established fact that a reader will be distracted by the It is a long established.
+          It is a long established fact that a reader will be distracted by the readable content of.
+        </p>
+
+        <div class="d-flex flex-column flex-md-row">
+          <input type="text" class="form-control rounded-0" placeholder="Web URL"
+            style="background-color: rgb(249, 246, 246);">
+          <input type="email" class="form-control rounded-0" placeholder="Email Address"
+            style="background-color: rgb(249, 246, 246);">
+          <button type="submit" class="btn btn-warning ms-2 rounded-0">
+            Submit
+          </button>
+        </div>
+      </div>
+      <div class="solution-img col-12 col-md-6 text-center text-md-end">
+        <img src="../assets/images/speed.png" class="img-fluid" alt="Speed Test Image">
+      </div>
+    </div>
+  </section>
+
+
+  <section class="container">
+
+  </section>
+  <section class="testimonials-section stats-bg pt-lg-5">
+    <div class="container">
+      <h2 class="section-title text-center">Our Clients Say</h2>
+      <p class="section-subtitle text-center">It is a long established fact that a reader will be distracted <br /> by
+        the
+        readable content .It is a
+      </p>
+
+      <div class="marquee-wrapper">
+        <div class="marquee-container">
+          <div class="testimonial-card">
+            <div class="card-content">
+              <p class="testimonial-text">
+                It is a long established fact that a reader will be
+                distracted by the readable content. It is a long
+                established fact that a reader
+              </p>
+              <div class="client-info">
+                <div class="client-avatar">
+                  <img src="./assets/images/clients.svg" alt="Clay Porter" class="rounded-circle">
+                </div>
+                <div class="client-details">
+                  <h6 class="client-name">Clay Porter</h6>
+                  <p class="client-title">Copywriter</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="card-content">
+              <p class="testimonial-text">
+                It is a long established fact that a reader will be
+                distracted by the readable content. It is a long
+                established fact that a reader
+              </p>
+              <div class="client-info">
+                <div class="client-avatar">
+                  <img src="./assets/images/clients.svg" alt="Clay Porter" class="rounded-circle">
+                </div>
+                <div class="client-details">
+                  <h6 class="client-name">John Doey</h6>
+                  <p class="client-title">Ship Builder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="card-content">
+              <p class="testimonial-text">
+                It is a long established fact that a reader will be
+                distracted by the readable content. It is a long
+                established fact that a reader
+              </p>
+              <div class="client-info">
+                <div class="client-avatar">
+                  <img src="./assets/images/clients.svg" alt="Clay Porter" class="rounded-circle">
+                </div>
+                <div class="client-details">
+                  <h6 class="client-name">Clay Porter</h6>
+                  <p class="client-title">Copywriter</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="card-content">
+              <p class="testimonial-text">
+                It is a long established fact that a reader will be
+                distracted by the readable content. It is a long
+                established fact that a reader
+              </p>
+              <div class="client-info">
+                <div class="client-avatar">
+                  <img src="./assets/images/clients.svg" alt="Clay Porter" class="rounded-circle">
+                </div>
+                <div class="client-details">
+                  <h6 class="client-name">Clay Porter</h6>
+                  <p class="client-title">Copywriter</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <div class="card-content">
+              <p class="testimonial-text">
+                It is a long established fact that a reader will be
+                distracted by the readable content. It is a long
+                established fact that a reader
+              </p>
+              <div class="client-info">
+                <div class="client-avatar">
+                  <img src="./assets/images/clients.svg" alt="Clay Porter" class="rounded-circle">
+                </div>
+                <div class="client-details">
+                  <h6 class="client-name">Clay Porter</h6>
+                  <p class="client-title">Copywriter</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="card-content">
+              <p class="testimonial-text">
+                It is a long established fact that a reader will be
+                distracted by the readable content. It is a long
+                established fact that a reader
+              </p>
+              <div class="client-info">
+                <div class="client-avatar">
+                  <img src="./assets/images/clients.svg" alt="Clay Porter" class="rounded-circle">
+                </div>
+                <div class="client-details">
+                  <h6 class="client-name">Clay Porter</h6>
+                  <p class="client-title">Copywriter</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="pagination-dots d-flex justify-content-center mt-4">
+        <span class="dot"></span>
+        <span class="dot active"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+    </div>
+  </section>
+
 
 
   <section class="py-5" style="background-color: #FAFAFA;">
