fix:wip-layout done

--- a/src/index.html
+++ b/src/index.html
@@ -306,15 +306,115 @@
       </div>
     </div>
   </section>
-
+  <section class="container">
+    <div class="plans d-flex justify-content-center ">
+      <div class="plans-txt text-center" style="background-color: #FAFAFA;">
+        <h3>Our Plans</h3>
+        <p>Choose the Right SEO for you.</p>
+        <div class="row">
+          <div class="plans-box col-12 col-md-4 mt-4">
+            <h4>Plus</h4>
+            <h3 class="mt-4 mb-4"><span>$</span>46/<span>month</span></h3>
+            <p>408GB Bandwidth</p>
+            <p>Business & Finance Analysing</p>
+            <p>24 Hour Support</p>
+            <p>Customer Management</p>
+            <button>Get Started</button>
+          </div>
+          <div class="plans-box col-12 col-md-4 mt-4">
+            <h4>Beginner</h4>
+            <h3 class="mt-4 mb-4"><span>$</span>66/<span>month</span></h3>
+            <p>408GB Bandwidth</p>
+            <p>Business & Finance Analysing</p>
+            <p>24 Hour Support</p>
+            <p>Customer Management</p>
+            <button>Get Started</button>
+          </div>
+          <div class="plans-box col-12 col-md-4 mt-4">
+            <h4>Advanced</h4>
+            <h3 class="mt-4 mb-4"><span>$</span>86/<span>month</span></h3>
+            <p>408GB Bandwidth</p>
+            <p>Business & Finance Analysing</p>
+            <p>24 Hour Support</p>
+            <p>Customer Management</p>
+            <button>Get Started</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="container">
+    <div class=" exp-team d-flex justify-content-center mt-5">
+      <div class="exp-txt text-center">
+        <h3>Our Expert Team <span>Members</span></h3>
+        <p>It is a long established fact that a reader will be distracted by the readable content .It is a long
+          established fact that a reader </p>
+        <div class="row mt-5">
+          <div class="members col-12 col-md-3 mt-3 mb-3">
+            <img src="./assets/images/m1.png" class="img-fluid mt-3 mb-3">
+            <h4>Muriel Whee</h4>
+            <p>Marketing Manager</p>
+            <div class="d-flex justify-content-center">
+              <div class="icons mb-3">
+                <img src="./assets/images/google.svg" class="img-fluid me-2">
+                <img src="./assets/images/insta.svg" class="img-fluid me-2">
+                <img src="./assets/images/twitter.svg" class="img-fluid me-2">
+                <img src="./assets/images/fb.svg" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="members col-12 col-md-3 mt-3 mb-3">
+            <img src="./assets/images/m2.png" class="img-fluid mt-3 mb-3">
+            <h4>John Doe</h4>
+            <p>Marketing Manager</p>
+            <div class="d-flex justify-content-center">
+              <div class="icons mb-3">
+                <img src="./assets/images/google.svg" class="img-fluid me-2">
+                <img src="./assets/images/insta.svg" class="img-fluid me-2">
+                <img src="./assets/images/twitter.svg" class="img-fluid me-2">
+                <img src="./assets/images/fb.svg" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="members col-12 col-md-3 mt-3 mb-3">
+            <img src="./assets/images/m3.png" class="img-fluid mt-3 mb-3">
+            <h4>Clay Porter</h4>
+            <p>Marketing Manager</p>
+            <div class="d-flex justify-content-center">
+              <div class="icons mb-3">
+                <img src="./assets/images/google.svg" class="img-fluid me-2">
+                <img src="./assets/images/insta.svg" class="img-fluid me-2">
+                <img src="./assets/images/twitter.svg" class="img-fluid me-2">
+                <img src="./assets/images/fb.svg" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="members col-12 col-md-3 mt-3 mb-3">
+            <img src="./assets/images/m4.png" class="img-fluid mt-3 mb-3">
+            <h4>Doug Norm</h4>
+            <p>Marketing Manager</p>
+            <div class="d-flex justify-content-center">
+              <div class="icons mb-3">
+                <img src="./assets/images/google.svg" class="img-fluid me-2">
+                <img src="./assets/images/insta.svg" class="img-fluid me-2">
+                <img src="./assets/images/twitter.svg" class="img-fluid me-2">
+                <img src="./assets/images/fb.svg" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="container">
   </section>
   <section class="testimonials-section stats-bg pt-lg-5">
     <div class="container">
       <h2 class="section-title text-center">Our Clients Say</h2>
-      <p class="section-subtitle text-center">It is a long established fact that a reader will be distracted <br /> by
+      <p class="section-subtitle text-center">It is a long established fact that a reader will be distracted <br />
+        by
         the
         readable content .It is a
       </p>
@@ -444,9 +544,6 @@
       </div>
     </div>
   </section>
-
-
-
   <section class="py-5" style="background-color: #FAFAFA;">
     <div class="container text-center">
       <h2 class="mb-3 fw-normal">Subscribe & Find The Perfect Cosmetics</h2>
@@ -465,7 +562,6 @@
       </form>
     </div>
   </section>
-
   <footer class="py-5 text-center">
     <div class="container">
       <h4 class="fw-bold mb-4">nuvosa<span style="color: #FF4D5A;">●</span></h4>
