fix:wip(pixel perfection added to half){

--- a/src/index.html
+++ b/src/index.html
@@ -53,13 +53,34 @@
           <img src="/assets/images/Take a tour.png" class="img-2 img-fluid" style="max-height: 50px;">
         </div>
       </div>
-      <div class="col-12 col-md-6 mb-md-0 d-flex justify-content-end">
+      <div class="col-12 col-md-6 mb-md-0 d-flex justify-content-end flex-column">
         <img src="../assets/images/hero-img.png" alt="hero-section" class="img-fluid">
+        <div class="team d-flex flex-column justify-content-center align-items-center">
+          <h4>Our Creative Team</h4>
+          <div class="team-create d-flex ">
+
+            <div class="team-pics1">
+              <img src="./assets/images/Ellipse 15.png">
+            </div>
+            <div class="team-pics2">
+              <img src="./assets/images/Ellipse 16.png">
+            </div>
+            <div class="team-pics3">
+              <img src="./assets/images/Ellipse 17.png">
+            </div>
+            <div class="team-pics4">
+              <img src="./assets/images/Ellipse 18.png">
+            </div>
+            <div class="team-pics5">
+              <img src="./assets/images/Ellipse 19.png">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
   <section class="container d-flex justify-content-start align-items-center">
-    <div class="post-hero row px-3 px-md-0 gx-4 gy-4 mt-2">
+    <div class="post-hero row px-3 px-md-0 gx-2 gy-4 mt-2  justify-content-between">
       <div class="col-12 col-md-4">
         <div class="post-hero-boxes">
           <div class=" social d-flex align-items-center">
@@ -92,8 +113,9 @@
       </div>
     </div>
   </section>
+
   <section class="container my-5">
-    <div class="optimising mt-5">
+    <div class="optimising ">
       <h3>Optimising your <span>Website</span></h3>
       <p>
         It is a long established fact that a reader will be distracted by the readable content of a page when it is a
@@ -102,7 +124,7 @@
 
       <div class="row g-4 mt-4">
         <div class="col-12 col-sm-6 col-lg-3">
-          <div class="optimising-inner-containers text-center h-100 p-3">
+          <div class="optimising-inner-containers text-start h-100 p-3">
             <img src="../assets/images/research.svg" alt="Keyword Research" class="img-fluid mb-3">
             <h4>Keyword Research</h4>
             <p>
@@ -111,7 +133,7 @@
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-          <div class="optimising-inner-containers text-center h-100 p-3 ">
+          <div class="optimising-inner-containers text-start h-100 p-3 ">
             <img src="../assets/images/content.svg" alt="Content Optimisation" class="img-fluid mb-3">
             <h4>Content Optimisation</h4>
             <p>
@@ -120,7 +142,7 @@
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-          <div class="optimising-inner-containers text-center h-100 p-3">
+          <div class="optimising-inner-containers text-start h-100 p-3">
             <img src="../assets/images/Target.svg" alt="Target Analysis" class="img-fluid mb-3">
             <h4>Target Analysis</h4>
             <p>
@@ -129,7 +151,7 @@
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-          <div class="optimising-inner-containers text-center h-100 p-3">
+          <div class="optimising-inner-containers text-start h-100 p-3">
             <img src="../assets/images/Testing.svg" alt="Continuous Testing" class="img-fluid mb-3">
             <h4>Continous Testing</h4>
             <p>
@@ -140,6 +162,7 @@
       </div>
     </div>
   </section>
+
   <section class="container ">
     <div class="row align-items-center">
       <div class="solution-text col-12 col-md-6">
@@ -148,11 +171,12 @@
           established fact that a reader will be distracted by the readable content of.</p>
         <button class="btn btn-warning width:100px mb-2">Learn More</button>
       </div>
-      <div class="solution-img col-12 col-md-6">
+      <div class="solution-img col-12 col-md-6 mt-5">
         <img src="../assets/images/solutions.png" class="img-fluid">
       </div>
     </div>
   </section>
+
   <section class="container">
     <div class="mt-5 d-flex">
       <div class="row align-items-center">
@@ -174,6 +198,7 @@
       </div>
     </div>
   </section>
+
   <section class="container">
     <div class="choosing d-flex row justify-content-center text-center ">
       <h3>Why you should <span>choose us</span></h3>
@@ -188,6 +213,8 @@
               <h5 class="card-title">See Optimization</h5>
               <p class="card-text">It is a long established fact that a reader will be distracted by.It is a long
                 established.</p>
+              <button class="btn btn-warning w-50 mb-2">Learn More</button>
+
             </div>
           </div>
         </div>
@@ -198,6 +225,8 @@
               <h5 class="card-title">Keyword Research</h5>
               <p class="card-text">It is a long established fact that a reader will be distracted by.It is a long
                 established.</p>
+              <button class="btn btn-warning w-50 mb-2">Learn More</button>
+
             </div>
           </div>
         </div>
@@ -209,12 +238,15 @@
               <p class="card-text ">It is a long established fact that a reader will be distracted by.It is a
                 long
                 established.</p>
+              <button class="btn btn-warning w-50 mb-2">Learn More</button>
+
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
   <section class="container">
     <div class="seo d-flex row justify-content-center align-items-center">
       <div class="seo-img col-12 col-md-6 ">
@@ -260,28 +292,44 @@
       </div>
     </div>
   </section>
-  <section class="py-5">
+
+
+  <section class="py-5 bg-white">
     <div class="container">
-      <div class="row text-center gy-4">
-        <div class="col-6 col-md-3">
-          <h3>86</h3>
-          <p>Happy Clients</p>
-        </div>
-        <div class="col-6 col-md-3">
-          <h3>118</h3>
-          <p>Projects Done</p>
-        </div>
-        <div class="col-6 col-md-3">
-          <h3>6+</h3>
-          <p>Years of Experience</p>
-        </div>
-        <div class="col-6 col-md-3">
-          <h3>14</h3>
-          <p>National Awards</p>
+      <div class="stats-wrapper">
+        <div
+          class="d-flex flex-column flex-md-row justify-content-center align-items-center border  text-center py-4 gap-5">
+
+          <div>
+            <h2 class="fw-semibold mb-0">86</h2>
+            <p class="mb-0 text-muted">Happy Clients</p>
+          </div>
+          <span class="dot red-dot d-none d-md-inline-block"></span>
+
+          <div>
+            <h2 class="fw-semibold mb-0">118</h2>
+            <p class="mb-0 text-muted">Project Done</p>
+          </div>
+
+          <span class="dot green-dot d-none d-md-inline-block"></span>
+
+          <div>
+            <h2 class="fw-semibold mb-0">6+</h2>
+            <p class="mb-0 text-muted">Years Of Experience</p>
+          </div>
+
+          <span class="dot yellow-dot d-none d-md-inline-block"></span>
+
+          <div>
+            <h2 class="fw-semibold mb-0">14</h2>
+            <p class="mb-0 text-muted">National Awards</p>
+          </div>
+
         </div>
       </div>
     </div>
   </section>
+
   <section class="container my-5">
     <div class="row align-items-center">
       <div class="solution-text col-12 col-md-6 mb-4 mb-md-0">
@@ -306,15 +354,16 @@
       </div>
     </div>
   </section>
-  <section class="container">
-    <div class="plans d-flex justify-content-center ">
-      <div class="plans-txt text-center" style="background-color: #FAFAFA;">
+
+  <section class="container" style="background-color: #FAFAFA;">
+    <div class="plans d-flex justify-content-center">
+      <div class="plans-txt text-center">
         <h3>Our Plans</h3>
         <p>Choose the Right SEO for you.</p>
-        <div class="row">
-          <div class="plans-box col-12 col-md-4 mt-4">
+        <div class="row g-4">
+          <div class="plans-box col-12 col-md-4 mt-4 ">
             <h4>Plus</h4>
-            <h3 class="mt-4 mb-4"><span>$</span>46/<span>month</span></h3>
+            <h3 class="mt-4 mb-4"><span class="dollar">$</span>46/<span>month</span></h3>
             <p>408GB Bandwidth</p>
             <p>Business & Finance Analysing</p>
             <p>24 Hour Support</p>
@@ -323,7 +372,7 @@
           </div>
           <div class="plans-box col-12 col-md-4 mt-4">
             <h4>Beginner</h4>
-            <h3 class="mt-4 mb-4"><span>$</span>66/<span>month</span></h3>
+            <h3 class="mt-4 mb-4"><span class="dollar">$</span>66/<span>month</span></h3>
             <p>408GB Bandwidth</p>
             <p>Business & Finance Analysing</p>
             <p>24 Hour Support</p>
@@ -332,7 +381,7 @@
           </div>
           <div class="plans-box col-12 col-md-4 mt-4">
             <h4>Advanced</h4>
-            <h3 class="mt-4 mb-4"><span>$</span>86/<span>month</span></h3>
+            <h3 class="mt-4 mb-4"><span class="dollar">$</span>86/<span>month</span></h3>
             <p>408GB Bandwidth</p>
             <p>Business & Finance Analysing</p>
             <p>24 Hour Support</p>
@@ -345,13 +394,15 @@
   </section>
 
   <section class="container">
-    <div class=" exp-team d-flex justify-content-center mt-5">
-      <div class="exp-txt text-center">
+    <div class="exp-team d-flex justify-content-center mt-5 ">
+      <div class="exp-txt text-center" style="max-width: 1200px; margin: 0 auto;">
         <h3>Our Expert Team <span>Members</span></h3>
-        <p>It is a long established fact that a reader will be distracted by the readable content .It is a long
-          established fact that a reader </p>
-        <div class="row mt-5">
-          <div class="members col-12 col-md-3 mt-3 mb-3">
+        <p class="mb-5 text-center">It is a long established fact that a reader will be distracted by the readable
+          content.</p>
+
+        <div class="d-flex justify-content-center flex-wrap gap-4">
+
+          <div class="members d-flex flex-column align-items-center">
             <img src="./assets/images/m1.png" class="img-fluid mt-3 mb-3">
             <h4>Muriel Whee</h4>
             <p>Marketing Manager</p>
@@ -364,7 +415,8 @@
               </div>
             </div>
           </div>
-          <div class="members col-12 col-md-3 mt-3 mb-3">
+
+          <div class="members d-flex flex-column align-items-center">
             <img src="./assets/images/m2.png" class="img-fluid mt-3 mb-3">
             <h4>John Doe</h4>
             <p>Marketing Manager</p>
@@ -377,7 +429,8 @@
               </div>
             </div>
           </div>
-          <div class="members col-12 col-md-3 mt-3 mb-3">
+
+          <div class="members d-flex flex-column align-items-center">
             <img src="./assets/images/m3.png" class="img-fluid mt-3 mb-3">
             <h4>Clay Porter</h4>
             <p>Marketing Manager</p>
@@ -390,7 +443,8 @@
               </div>
             </div>
           </div>
-          <div class="members col-12 col-md-3 mt-3 mb-3">
+
+          <div class="members d-flex flex-column align-items-center">
             <img src="./assets/images/m4.png" class="img-fluid mt-3 mb-3">
             <h4>Doug Norm</h4>
             <p>Marketing Manager</p>
@@ -403,14 +457,13 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
   </section>
 
-  <section class="container">
-  </section>
-  <section class="testimonials-section stats-bg pt-lg-5">
+  <section class="testimonials-section stats-bg pt-lg-5 mt-4 mb-5">
     <div class="container">
       <h2 class="section-title text-center">Our Clients Say</h2>
       <p class="section-subtitle text-center">It is a long established fact that a reader will be distracted <br />
@@ -544,10 +597,11 @@
       </div>
     </div>
   </section>
+
   <section class="py-5" style="background-color: #FAFAFA;">
     <div class="container text-center">
       <h2 class="mb-3 fw-normal">Subscribe & Find The Perfect Cosmetics</h2>
-      <p class="mb-4 text-muted">Enter Your Email And Get Updated New Products & News</p>
+      <p class="mb-4">Enter Your Email And Get Updated New Products & News</p>
 
       <form class="row justify-content-center g-2">
         <div class="col-md-3">
@@ -557,11 +611,12 @@
           <input type="email" class="form-control" placeholder="Email Address">
         </div>
         <div class="col-md-2">
-          <button class="btn btn-primary w-100" style="background-color: #7B61FF; border: none;">Subscribe</button>
+          <button class="btn btn-primary w-75" style="background-color: #7B61FF; border: none;">Subscribe</button>
         </div>
       </form>
     </div>
   </section>
+
   <footer class="py-5 text-center">
     <div class="container">
       <h4 class="fw-bold mb-4">nuvosa<span style="color: #FF4D5A;">●</span></h4>
