fix:wip(website updated)

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <li class="nav-item"><a class="nav-link fs-6" href="#">Contact</a></li>
         </ul>
         <form class=" ms-5 d-flex justify-content-end" role="search">
-          <input class="form-control me-2 w-50 rounded-0 text-center" type="search" placeholder="Let's talk
+          <input class="form-control me-2 w-50 rounded-0 text-center" type="search" placeholder="Let's Talk
           " aria-label="Search" style="border: 2px solid black;">
           <button class=" btn btn-warning width:100px rounded-0" type="submit">
             <i class="bi bi-search"></i>
@@ -89,8 +89,12 @@
           </div>
           <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
             established fact that.</p>
+          <div class="d-flex justify-content-end">
+            <img src="./assets/images/Arrow - Right.png">
+          </div>
         </div>
       </div>
+
       <div class="col-12 col-md-4">
         <div class="post-hero-boxes">
           <div class=" email d-flex align-items-center">
@@ -99,6 +103,9 @@
           </div>
           <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
             established fact that.</p>
+          <div class="d-flex justify-content-end">
+            <img src="./assets/images/Arrow - Right.png">
+          </div>
         </div>
       </div>
       <div class="col-12 col-md-4">
@@ -109,6 +116,9 @@
           </div>
           <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
             established fact that.</p>
+          <div class="d-flex justify-content-end">
+            <img src="./assets/images/Arrow - Right.png">
+          </div>
         </div>
       </div>
     </div>
@@ -184,21 +194,21 @@
 
   <section class="container">
     <div class="mt-5 d-flex">
-      <div class="row align-items-center px-3 px-md-0 gx-2 gy-4 mt-2 mb-4 justify-content-between">
-        <div class="feature-boxes col-12 col-md-3 ">
+      <div class="row align-items-center px-3 px-md-0 gx-2 gy-4 mt-0 mb-4 justify-content-center">
+        <div class="feature-boxes col-12 col-md-4 w-25 ">
           <img src="../assets/images/grow.svg" class="mt-5">
           <h3 class="mt-4">Grow Your Business</h3>
           <p>It is a long established fact that a reader will be distracted by.</p>
           <span style="color:#7B61FF;">Read More...</span>
         </div>
-        <div class="feature-boxes col-12 col-md-3">
+        <div class="feature-boxes col-12 col-md-4 w-25">
           <img src="../assets/images/lead.svg" class="mt-5">
           <h3 class="mt-4">Get Quality Leads</h3>
           <p>It is a long established fact that a reader will be distracted by.</p>
           <span style="color:#7B61FF;">Read More...</span>
 
         </div>
-        <div class="feature-boxes col-12 col-md-3">
+        <div class="feature-boxes col-12 col-md-4 w-25">
           <img src="../assets/images/sales.svg" class="mt-5">
           <h3 class="mt-4">Drive More Sales</h3>
           <p>It is a long established fact that a reader will be distracted by.</p>
@@ -616,12 +626,12 @@
 
 
 
-  <section class="py-5" style="background-color: #FAFAFA;">
-    <div class="container text-center">
-      <h2 class="mb-3 fw-normal">Subscribe & Find The Perfect Cosmetics</h2>
+  <section class="container py-5">
+    <div class=" text-center" style="background-color: #FAFAFA;">
+      <h2 class="mb-3 pt-5 fw-normal">Subscribe & Find The Perfect Cosmetics</h2>
       <p class="mb-4">Enter Your Email And Get Updated New Products & News</p>
 
-      <form class="d-flex flex-wrap justify-content-center gap-3">
+      <form class="d-flex flex-wrap justify-content-center gap-3 pb-5">
         <input type="text" class="form-control rounded-1" placeholder="Name" style="max-width: 250px;">
         <input type="email" class="form-control rounded-1" placeholder="Email Address" style="max-width: 250px;">
         <button class="btn btn-primary rounded-1"
