fix:wip(website updated)

--- a/src/index.html
+++ b/src/index.html
@@ -334,27 +334,27 @@
           class="d-flex flex-column flex-md-row justify-content-center align-items-center border  text-center py-4 gap-5">
 
           <div>
-            <h2 class="fw-semibold mb-0">86</h2>
+            <h2 class="fw-semibold mb-0" style="color: rgb(119, 118, 118);">86</h2>
             <p class="mb-0 text-muted">Happy Clients</p>
           </div>
           <span class="dot red-dot d-none d-md-inline-block"></span>
 
           <div>
-            <h2 class="fw-semibold mb-0">118</h2>
+            <h2 class="fw-semibold mb-0" style="color: rgb(105, 104, 104);">118</h2>
             <p class="mb-0 text-muted">Project Done</p>
           </div>
 
           <span class="dot green-dot d-none d-md-inline-block"></span>
 
           <div>
-            <h2 class="fw-semibold mb-0">6+</h2>
+            <h2 class="fw-semibold mb-0" style="color: rgb(105, 104, 104);">6+</h2>
             <p class="mb-0 text-muted">Years Of Experience</p>
           </div>
 
           <span class="dot yellow-dot d-none d-md-inline-block"></span>
 
           <div>
-            <h2 class="fw-semibold mb-0">14</h2>
+            <h2 class="fw-semibold mb-0" style="color: rgb(105, 104, 104);">14</h2>
             <p class="mb-0 text-muted">National Awards</p>
           </div>
 
