--- a/src/index.html
+++ b/src/index.html
@@ -197,20 +197,20 @@
   <section class="container">
     <div class="mt-5 d-flex">
       <div class="row align-items-center px-3 px-md-0 gx-2 gy-4 mt-0 mb-4 justify-content-center">
-        <div class="feature-boxes col-12 col-md-4 w-25 ">
+        <div class="feature-boxes col-12 col-md-4 ">
           <img src="../assets/images/grow.svg" class="mt-5">
           <h3 class="mt-4">Grow Your Business</h3>
           <p>It is a long established fact that a reader will be distracted by.</p>
           <span style="color:#7B61FF;">Read More...</span>
         </div>
-        <div class="feature-boxes col-12 col-md-4 w-25">
+        <div class="feature-boxes col-12 col-md-4">
           <img src="../assets/images/lead.svg" class="mt-5">
           <h3 class="mt-4">Get Quality Leads</h3>
           <p>It is a long established fact that a reader will be distracted by.</p>
           <span style="color:#7B61FF;">Read More...</span>
 
         </div>
-        <div class="feature-boxes col-12 col-md-4 w-25">
+        <div class="feature-boxes col-12 col-md-4">
           <img src="../assets/images/sales.svg" class="mt-5">
           <h3 class="mt-4">Drive More Sales</h3>
           <p>It is a long established fact that a reader will be distracted by.</p>
@@ -645,7 +645,7 @@
     </div>
   </section>
   <section class="container d-flex justify-content-center align-items-center">
-    <div id="pop-up" class="text-center" hidden>
+    <div id="pop-up" class="text-center">
       <span>Form Submitted Successfully</span>
     </div>
   </section>
