--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="navbar-nav ms-auto mx-5 mb-2 mb-lg-0 gap-5 me-5">
+        <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 gap-5 me-5">
           <li class="nav-item"><a class="nav-link " href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Blog</a></li>
