--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="./scss/styles.scss">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -51,7 +54,7 @@
           long .It is a long established fact that a reader will be distracted by the readable content of a is simply.
           It is a long established fact that a reader will be distracted.</p>
         <div class="hero-button d-flex align-items-center gap-2">
-          <button class=" btn btn-warning rounded-0 me-3 hero-btn" style="width: 120px;">Get Started</button>
+          <button class=" btn btn-warning rounded-0 gap-3 hero-btn" style="width: 120px;">Get Started</button>
           <img src="/assets/images/Take a tour.png" class="img-2 img-fluid" style="max-height: 50px;">
         </div>
       </div>
@@ -81,13 +84,14 @@
       </div>
     </div>
   </section>
+
   <section class="container d-flex justify-content-start align-items-center">
     <div class="post-hero row px-3 px-md-0 gx-2 gy-4 mt-2  justify-content-between">
       <div class="col-12 col-md-4">
         <div class="post-hero-boxes">
-          <div class=" social d-flex align-items-center">
-            <img src="/assets/images/social.svg" class="img-fluid" style="width: 70px; height: 70px;">
-            <h4 class="fw-normal">Social Media Management</h4>
+          <div class=" social d-flex align-items-center flex-wrap flex-lg-nowrap gap-3">
+            <img src="/assets/images/social.svg" class="img-fluid" style="width: 120px; height: 120px;">
+            <h4 class="fw-normal" style="max-width: 70%;">Social Media Management</h4>
           </div>
           <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
             established fact that.</p>
@@ -99,9 +103,9 @@
 
       <div class="col-12 col-md-4">
         <div class="post-hero-boxes">
-          <div class=" email d-flex align-items-center">
-            <img src="/assets/images/email.svg" class="img-fluid" style="width: 70px; height: 70px;">
-            <h4 class="fw-normal">Email Marketing</h4>
+          <div class=" email d-flex align-items-center flex-wrap flex-lg-nowrap gap-3">
+            <img src="/assets/images/email.svg" class="img-fluid" style="width: 120px; height: 120px;">
+            <h4 class="fw-normal ">Email Marketing</h4>
           </div>
           <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
             established fact that.</p>
@@ -112,9 +116,9 @@
       </div>
       <div class="col-12 col-md-4">
         <div class="post-hero-boxes">
-          <div class=" seo d-flex align-items-center">
-            <img src="/assets/images/seo.svg" class="img-fluid" style="width: 70px; height: 70px;">
-            <h4 class="fw-normal">SEO Management</h4>
+          <div class=" seo d-flex align-items-center flex-wrap flex-lg-nowrap">
+            <img src="/assets/images/seo.svg" class="img-fluid" style="width: 120px; height: 120px;">
+            <h4 class="fw-normal ">SEO Management</h4>
           </div>
           <p>It is a long established fact that a reader will be distracted by the readable content.It is a long
             established fact that.</p>
@@ -125,6 +129,7 @@
       </div>
     </div>
   </section>
+
 
   <section class="container my-5">
     <div class="optimising ">
@@ -221,14 +226,15 @@
     </div>
   </section>
 
+
   <section class="card-section text-bg-light py-5">
     <div class="container py-xl-5">
       <div class="row justify-content-center">
         <div class="col-lg-9">
-          <h2 class="section-title text-center">
-            Why you should <span class="text-bluish">Choose Us.</span>
+          <h2 class="section-title text-center mb-4">
+            Why you should <span style="color: #7B61FF;">Choose Us.</span>
           </h2>
-          <p class="section-subtitle text-center mx-auto">
+          <p class="section-subtitle text-center mx-auto mt-2 mb-5">
             It is a long established fact that a reader will be distracted by
             the readable content .It is a long established fact that a reader
             .It is a long established fact that a reader will be .
@@ -246,7 +252,8 @@
               It is a long established fact that a reader will be distracted
               by the it is a long established.
             </p>
-            <a class="my-lg-3 mb-lg-5 btn rounded-1 btn-warning btn-lg fs-6 px-lg-4 py-lg-3 all-btn">Learn More</a>
+            <a class="my-lg-3 mb-lg-5 btn rounded-1 btn-warning btn-lg fs-6 px-lg-4 py-lg-3 all-btn"
+              style="width: 60%; margin: 0 auto; display: block;">Learn More</a>
           </div>
         </div>
         <div class="col-xl-3 col-md-4 col-sm-12 text-center">
@@ -259,7 +266,8 @@
               It is a long established fact that a reader will be distracted
               by the it is a long established.
             </p>
-            <a class="my-lg-3 mb-lg-5 btn rounded-1 btn-warning btn-lg fs-6 px-lg-4 py-lg-3 all-btn">Learn More</a>
+            <a class="my-lg-3 mb-lg-5 btn rounded-1 btn-warning btn-lg fs-6 px-lg-4 py-lg-3 all-btn"
+              style="width: 60%; margin: 0 auto; display: block;">Learn More</a>
           </div>
         </div>
         <div class="col-xl-3 col-md-4 col-sm-12 text-center">
@@ -272,7 +280,8 @@
               It is a long established fact that a reader will be distracted
               by the it is a long established.
             </p>
-            <a class="my-lg-3 mb-lg-5 btn rounded-1 btn-warning btn-lg fs-6 px-lg-4 py-lg-3 all-btn">Learn More</a>
+            <a class="my-lg-3 mb-lg-5 btn rounded-1 btn-warning btn-lg fs-6 px-lg-4 py-lg-3 all-btn"
+              style="width: 60%; margin: 0 auto; display: block;">Learn More</a>
           </div>
         </div>
       </div>
@@ -407,7 +416,7 @@
               <p>Business & Finance Analysing</p>
               <p>24 Hour Support</p>
               <p>Customer Management</p>
-              <button>Get Started</button>
+              <button style="font-size: 1.2rem; padding: 8px;">Get Started</button>
             </div>
             <div class="plans-box col-12 col-md-4 mt-4">
               <h4>Beginner</h4>
@@ -416,7 +425,7 @@
               <p>Business & Finance Analysing</p>
               <p>24 Hour Support</p>
               <p>Customer Management</p>
-              <button>Get Started</button>
+              <button style="font-size: 1.2rem; padding: 8px;">Get Started</button>
             </div>
             <div class="plans-box col-12 col-md-4 mt-4">
               <h4>Advanced</h4>
@@ -425,14 +434,13 @@
               <p>Business & Finance Analysing</p>
               <p>24 Hour Support</p>
               <p>Customer Management</p>
-              <button>Get Started</button>
+              <button style="font-size: 1.2rem; padding: 8px;">Get Started</button>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
 
   <section class="container">
     <div class="exp-team d-flex justify-content-center mt-5 ">
@@ -485,11 +493,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
 
   <section class="testimonials-section stats-bg pt-lg-5 mt-4 mb-5">
     <div class="container">
@@ -625,8 +628,6 @@
       </div>
     </div>
   </section>
-
-
 
   <section class="container py-5">
     <div class=" text-center" style="background-color: #FAFAFA;">
